did mistake. fixed it.

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <h1>edunote</h1>
         <a class="nav-item" href="/ask" style="margin-left: 800px;">ask</a>
-        <a class="nav-item" href="/notes" id="active">notes</a>
+        <a class="nav-item" href="/notes">notes</a>
         <a class="nav-item" href="/recordings">recordings</a>
         <a class="nav-item" href="/profile" style="margin-right: 100px;">profile</a>
     </nav>
